manifests/02-networkpolicy-default-deny.yaml
# Default deny all ingress and egress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: openshift-cloud-credential-operator
  annotations:
    capability.openshift.io/name: CloudCredential
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
